--- a/YoutubeEnchanted/packages.config
+++ b/YoutubeEnchanted/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.17.1" targetFramework="net48" />
+  <package id="CliWrap" version="3.5.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.WebView2" version="1.0.1462.37" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.1" targetFramework="net48" />
@@ -16,4 +18,5 @@
   <package id="Vlc.DotNet.Core.Interops" version="3.1.0" targetFramework="net48" />
   <package id="Vlc.DotNet.Forms" version="3.1.0" targetFramework="net48" />
   <package id="YoutubeExplode" version="6.2.5" targetFramework="net48" />
+  <package id="YoutubeExplode.Converter" version="6.2.5" targetFramework="net48" />
 </packages>
